--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Test odeslání do Boldem</h2>
-    <form method="POST" action="https://app.boldem.cz/form/fs-3ytrbvcxs" target="_blank">
-      <input type="email" name="email" placeholder="Zadejte svůj e-mail" required>
-      <button type="submit">Odeslat</button>
-    </form>
-  </div>
+ <div id="tajenkaformular"></div>
 </body>
 </html>
