--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     const steps = [
       {
         name: 'proc',
-        question: 'Proč se vlastně po něčem novém díváte?',
+        question: 'Co v hračce hledáte?',
         multiple: true,
         options: ['Hledáme něco smysluplného na doma', 'Máme oslavu (narozeniny, Vánoce…)', 'Chceme doplnit stávající hračky', 'Chceme podpořit učení nebo rozvoj', 'Jen se rozhlížím', 'Hledám něco pro více dětí najednou']
       },
