--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="tajenkaformular"></div>
+    <div id="pruvodcetest"></div>
     <form id="quizForm">
       <div class="progress" id="progressText">Krok 1 z 1</div>
       <div class="progress-bar"><div class="progress-fill" id="progressFill"></div></div>
