--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hraní na míru | DomeCZECH</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://front.boldem.cz/boldem.js?uc=996385&wg=71eeb0ea-cb7a-43bd-9be7-9897556e918f&sc=0" defer type="text/javascript"></script>
   <style>
     * { box-sizing: border-box; }
     body {
