--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         }
         answers['email'] = email;
         document.getElementById('te-our5cbiam-input').value = email;
-        document.querySelector('form#bf-form-fs-ok06okd93 button.bf-button__btn')?.click();
+        document.getElementById('bf-form-fs-ok06okd93').submit();
       };
       formSteps.appendChild(btn);
     } else {
