--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         }
         // vložení e-mailu do hidden pole
         const boldemInput = document.getElementById('te-our5cbiam-input');
+        console.log(email);
         if (boldemInput) boldemInput.value = email;
       };
       formSteps.appendChild(btn);
