--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hraní na míru | DomeCZECH</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://front.boldem.cz/boldem.js?uc=996385&wg=71eeb0ea-cb7a-43bd-9be7-9897556e918f&sc=0" defer type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
