--- a/index.html
+++ b/index.html
@@ -152,12 +152,17 @@
       btn.type = 'button';
       btn.className = 'submit-button';
       btn.textContent = 'Odeslat';
+     const btn = document.createElement('button');
+      btn.type = 'button';
+      btn.className = 'submit-button';
+      btn.textContent = 'Odeslat';
       btn.onclick = () => {
         const email = document.getElementById('finalEmail').value;
         if (!email || !email.includes('@')) {
           alert('Zadejte prosím platný e-mail.');
           return;
         }
+
         // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
         let intervalCounter = 0;
         const maxTries = 20;
@@ -166,18 +171,16 @@
           if (nativeInput) {
             nativeInput.value = email;
             nativeInput.dispatchEvent(new Event('input', { bubbles: true }));
-            console.log('E-mail vložen nativně: ' + email);
+            console.log(' E-mail vložen nativně: ' + email);
             clearInterval(checkAndInsert);
           } else {
             intervalCounter++;
             if (intervalCounter >= maxTries) {
-              console.warn('Nepodařilo se najít Boldem input pro e-mail.');
+              console.warn(' Nepodařilo se najít Boldem input pro e-mail.');
               clearInterval(checkAndInsert);
             }
           }
         }, 300);
-          }
-        }, 2000);
       };
       formSteps.appendChild(btn);
     } else {
