--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
           alert('Zadejte prosím platný e-mail.');
           return;
         }
-
-        // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
+ // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
         let intervalCounter = 0;
         const maxTries = 20;
         const checkAndInsert = setInterval(() => {
           const nativeInput = document.getElementById('te-our5cbiam-input');
           if (nativeInput) {
-            nativeInput.value = email;
+            const nativeSetter = Object.getOwnPropertyDescriptor(window.HTMLInputElement.prototype, 'value').set;
+            nativeSetter.call(nativeInput, email);
             nativeInput.dispatchEvent(new Event('input', { bubbles: true }));
             console.log('✅ E-mail vložen nativně: ' + email);
             clearInterval(checkAndInsert);
