--- a/index.html
+++ b/index.html
@@ -159,25 +159,33 @@
           alert('Zadejte prosím platný e-mail.');
           return;
         }
- // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
+        
+        // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
         let intervalCounter = 0;
         const maxTries = 20;
         const checkAndInsert = setInterval(() => {
-          const nativeInput = document.getElementById('te-our5cbiam-input');
-          if (nativeInput) {
-            const nativeSetter = Object.getOwnPropertyDescriptor(window.HTMLInputElement.prototype, 'value').set;
-            nativeSetter.call(nativeInput, email);
-            nativeInput.dispatchEvent(new Event('input', { bubbles: true }));
-            console.log('✅ E-mail vložen nativně: ' + email);
-            clearInterval(checkAndInsert);
-          } else {
-            intervalCounter++;
-            if (intervalCounter >= maxTries) {
-              console.warn('❌ Nepodařilo se najít Boldem input pro e-mail.');
-              clearInterval(checkAndInsert);
-            }
-          }
-        }, 300);
+  const nativeInput = document.getElementById('te-our5cbiam-input');
+  console.log('[FAZE 1] Kontrola existence inputu: ', nativeInput);
+
+  if (nativeInput) {
+    try {
+      const nativeSetter = Object.getOwnPropertyDescriptor(window.HTMLInputElement.prototype, 'value').set;
+      nativeSetter.call(nativeInput, email);
+      nativeInput.dispatchEvent(new Event('input', { bubbles: true }));
+      console.log('[FAZE 2] Hodnota vložena nativně:', nativeInput.value);
+      clearInterval(checkAndInsert);
+    } catch (err) {
+      console.error('[CHYBA] Při pokusu o vložení e-mailu:', err);
+    }
+  } else {
+    intervalCounter++;
+    console.log(`[FAZE 0] Čekání... (${intervalCounter}/${maxTries})`);
+    if (intervalCounter >= maxTries) {
+      console.warn('❌ Nepodařilo se najít Boldem input pro e-mail.');
+      clearInterval(checkAndInsert);
+    }
+  }
+}, 300);
       };
       formSteps.appendChild(btn);
     } else {
