--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
           alert('Zadejte prosím platný e-mail.');
           return;
         }
-           // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
+           
+        // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
         let intervalCounter = 0;
         const maxTries = 20;
         const checkAndInsert = setInterval(() => {
@@ -168,12 +169,12 @@
 
   if (nativeInput) {
     try {
-      $('#te-our5cbiam-input')
-        .val(email)
-        .trigger('input')
-        .trigger('change')
-        .trigger('blur');
-      console.log('[FAZE 2] Hodnota vložena přes jQuery:', email);
+      nativeInput.focus();
+      nativeInput.value = email;
+      nativeInput.dispatchEvent(new Event('input', { bubbles: true }));
+      nativeInput.dispatchEvent(new Event('change', { bubbles: true }));
+      nativeInput.dispatchEvent(new Event('blur', { bubbles: true }));
+      console.log('✅ E-mail vložen simulací uživatele:', nativeInput.value);
       clearInterval(checkAndInsert);
     } catch (err) {
       console.error('[CHYBA] Při pokusu o vložení e-mailu:', err);
