--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="cs">
 <head>
@@ -5,7 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hraní na míru | DomeCZECH</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://front.boldem.cz/boldem.js?uc=996385&wg=71eeb0ea-cb7a-43bd-9be7-9897556e918f&sc=0" defer type="text/javascript"></script>
+  <script src="https://front.boldem.cz/boldem.js?uc=996385&wg=71eeb0ea-cb7a-43bd-9be7-9897556e918f&sc=0" defer type="text/javascript">
+
+  // Delegované vložení e-mailu do formuláře Boldem při kliknutí na odesílací tlačítko
+  $(document).on('mousedown', 'form#bf-form-fs-ok06okd93 button.bf-button__btn', function() {
+    const email = $('#finalEmail').val();
+    if (email && email.includes('@')) {
+      $('#te-our5cbiam-input').val(email).trigger('input').trigger('change').trigger('blur');
+      console.log('✅ [Delegace] E-mail vložen těsně před odesláním:', email);
+    } else {
+      console.warn('⚠️ [Delegace] E-mail nebyl validní nebo nebyl vyplněn.');
+    }
+  });
+
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <style>
     body {
@@ -141,7 +155,7 @@
     formSteps.appendChild(q);
 
     
-    if (step.input === 'email') {
+     if (step.input === 'email') {
       const input = document.createElement('input');
       input.type = 'email';
       input.id = 'finalEmail';
@@ -159,7 +173,7 @@
           alert('Zadejte prosím platný e-mail.');
           return;
         }
-           
+
         // jQuery čekání na načtení prvku z AJAXu a vložení e-mailu
         let intervalCounter = 0;
         const maxTries = 20;
